# channels_pytest_liveserver

./: .gitignore  README.md  pyproject.toml
app/app/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_liveserver.py
